src/test/ui/error-codes/E0412.stderr
error[E0412]: cannot find type `Something` in this scope
  --> $DIR/E0412.rs:11:6
   |
LL | impl Something {} //~ ERROR E0412
   |      ^^^^^^^^^ not found in this scope

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0412"
